# very-decorated

./: .gitignore  LICENSE  README.md  pyproject.toml
vdeco/: __init__.py
very_decorated/: __init__.py  core.py
